# nova-civilizational-architecture

./: .coveragerc  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  =4.0.0  AGENTS.md  AUDIT_COMPLETE.md  AUDIT_LOG.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_PLAN.md  DEFECTS_REGISTER.yml  DRIFT_REPORT.md  EPOCH_V10_MANIFEST.md  EVALUATION_PLAN.md  FLOW_FABRIC_PHASE2.md  FLOW_FABRIC_PHASE3.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_AUDIT_CODEX.md  META_LENS_TETHER_CONFIRMATION.md  Makefile  Nova_Phase1_Enhancements_Compressed.md  OpenAPI 3.1 Specification (YAML)_.txt  PHASE5_SUMMARY.md  README.md  REPO_MAP.md  RISK_REGISTER.md  SECURITY.md  SYSTEM_ARCHITECTURE.md  Slot 10_patches.md  Slot6_enhancement.md  Slot9_Enhanced_Diagnostic_Output_Format_v2.5.0.md  TEST_GAPS.md  TREE.md  Truth-Bound_Simulation_Core_v1.0.md  (+36 more)
.artifacts/: PR_DESCRIPTION.md  SOAK_LAUNCH_INSTRUCTIONS.md  a_peer_summary.json  audit-continuation-codex.md  audit_attestation_20251113.json  audit_complexity.txt  audit_complexity_full.txt  audit_complexity_summary.txt  audit_config_inventory.md  audit_config_inventory.py  audit_coverage_wisdom.json  audit_dangerous_calls.txt  audit_dead_code.txt  audit_defaults_disabled.txt  audit_defaults_enabled.txt  audit_dep_drift.txt  audit_dependencies.json  audit_docstrings.txt  audit_docstrings_summary.txt  audit_env_in_git.txt  audit_flags_documented.txt  audit_flags_documented_unused.txt  audit_flags_found.txt  audit_flags_undocumented.txt  audit_gitignore_secrets.txt  audit_hardcoded_secrets.txt  audit_high_complexity.txt  audit_import_cycles.txt  audit_import_cycles_detailed.txt  audit_installed.txt  audit_jwt_hardcoded.txt  audit_master_summary.md  audit_metrics_defined.txt  audit_metrics_orchestrator.txt  audit_metrics_potentially_dead.txt  audit_metrics_usage_analysis.txt  audit_metrics_used.txt  audit_outdated.json  audit_phase1_1_summary.md  audit_phase1_2_summary.md  (+57 more)
.claude/: agent.md  settings.local.json
.github/: .secrets.baseline  CI_TRIGGER.md  CODEOWNERS  copilot-instructions.md  pull_request_template.md
.nova/: ENTRY.md  LEARNING_PATH.md  README.md  entry_completions.yaml  entry_math_foundation.md  meta.yaml
acl/: registry.yaml
agents/: nova_ai_operating_framework.md
api/: __init__.py  health_config.py  security.py
attest/: 2025-09-30-anr-5_1.json  2025-10-phase-6.0-belief-propagation.json  REGISTRY_SNAPSHOT.md  certificate_of_completion.pdf.txt  civilizational_certificate.pem  final_attestation.json  hash_chain_diagram.json  latest_phase_7.0_beta.json  ledger.ndjson  phase-7.0-beta.json  phase10_complete.yaml  phase11_complete.yaml  phase11_init.json  phase7_complete.yaml  phase8_9_complete.yaml
config/: .env.example  adaptive_links.yaml  commitlint.config.js  feature_flags.py  meta.yaml  package.json  zenodo-metadata.json
constitutional_memory/: README.md  cli.py  events.jsonl  memory.py  schema.yaml
contracts/: autonomous_verification_ledger@1.yaml  bias_report@1.yaml  csi@1.yaml  csi_breakdown@1.yaml  distortion_detection_response.schema.json  feature.ids.contract.json  memory_resonance_stats@1.yaml  meta_lens_report@1.json  mse@1.yaml  orp@1.yaml  predictive_consistency@1.yaml  predictive_consistency_gap@1.yaml  predictive_pattern_alert@1.yaml  predictive_snapshot@1.yaml  rc_attestation@1.yaml  rc_criteria_result@1.yaml  regime_transition_ledger@1.yaml  slot03_emotional@2.yaml  slot04-07-belief-state.yaml  slot06_cultural@2.yaml  slot07_production@2.yaml  slot3_health_schema.json  slot6_cultural_profile_schema.json  slot_map.json  temporal_consistency@1.yaml  temporal_usm@1.yaml  transformation_geometry@1.yaml  tri_truth_signal@1.yaml  urf@1.yaml
decisions/: ADR-012-semantic-mirror-integration.md
docs/: # Nova Civilizational Architecture — Visual Map.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPARATIVE_ANALYSIS.md  CONTRACT_VERSIONING.md  CONTRIBUTING_CONSTITUTIONAL_CHECK.md  GLOSSARY.md  INTERSLOT_CONTRACTS.md  MATHEMATICAL_ARCHITECTURE.md  MISSION.md  Mother_Children_Invariance_Matrix_v1.7.1.md  NAVIGATION.md  NOVA_PRESENTATION.md  Nova_Dependency_Graph_v1.7.1.yaml  Nova_Ontology_Hierarchy_v1.7.1.md  PHASE11_COMPLETION.md  PHASE11_ORP_SUMMARY.md  PHASE_16_2_INTEGRATION.md  PHASE_5_1_ADAPTIVE_NEURAL_ROUTING.md  Phase12_E2E_Stability_Plan.md  Phase12_Summary.md  Phase13_Implementation_Checklist.md  Phase13_Initiation_Plan.md  Phase13_Migration_Map.md  README.md  README_AuditoryEpistemics.md  ROOT_DOCS.md  RUNBOOKS.md  SEQ_SLOT3_HIGH_RISK_PATH.md  SLOT6_MIGRATION_PLAN.md  SLOs.md  SYSTEM_ANALYSIS.md  Slot_Compliance_Validation_Checklist_v1.7.1.md  TESTS_OVERVIEW.md  VAULT_KEY_ROTATION.md  anr-bandit-integration.md  anr-implementation-summary.md  architecture.md  autonomy_artifact_v1_1.md  (+24 more)
ethics/: audit_config.yaml
evidence/: README.md
frameworks/: enums.py  geometric_memory.py
interface/: test_slot6_live.html
interfaces/: websocket_auth.py
logs/: unlearn_pulses.ndjson  validation_pulses.ndjson
migrations/: 001_create_ledger_tables.sql  README.md
monitoring/: README.md  docker-compose.yml  nova-alerts.yml  production-setup.md  standalone-prometheus.py  start.bat  start.ps1
notebooks/: phase_15_8_5_ab_analysis.ipynb
ops/: README.md  anr-autopromo-daily.ps1  anr-dr-drill.ps1  anr-final-test.ps1  anr-ledger-rotate.ps1  anr-pilot.ps1  anr_promotion_check.py  backup-anr-state.ps1  compact-decoder.py  daily-operations.md  import_grafana_panels.sh  nova-shortcuts.ps1  nova-shortcuts.sh  phase11_start.sh  production-runbook.md  prometheus-anr-rules.yaml  requirements-ops.txt
orchestrator/: __init__.py  adaptive_connections.py  adaptive_wisdom_poller.py  anr_mutex.py  app.py  arc.py  bus.py  config.py  core.py  federation_client.py  federation_health.py  federation_poller.py  federation_remediator.py  federation_synchronizer.py  flow_fabric_init.py  flow_metrics.py  health.py  health_pulse.py  http_metrics.py  ledger_reader.py  lock.py  metrics.py  mirror_utils.py  peer_store_singleton.py  phase10_manager.py  prometheus_metrics.py  rri.py  (+8 more)
(+1993 files in other folders)
