[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-civilizational-architecture"
version = "5.1.1"
description = "Nova Civilizational Architecture - Advanced framework for civilizational development with adaptive neural routing and continuity systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nova Framework Team", email = "team@nova-framework.dev"}
]
maintainers = [
    {name = "Nova Framework Team", email = "team@nova-framework.dev"}
]
keywords = [
    "civilizational-architecture",
    "adaptive-neural-routing", 
    "continuity-systems",
    "wisdom-governance",
    "truth-anchoring",
    "operational-regime-policy",
    "federation",
    "quantum-entropy"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.9"
dependencies = [
    "Flask==2.3.3",
    "PyYAML==6.0.2",
    "typing-extensions==4.14.1",
    "pydantic>=2,<3",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "slowapi>=0.1.9",
    "httpx>=0.25.0",
    "PyJWT>=2.8.0",
    "hypothesis==6.138.13",
    "python-dotenv==1.1.1",
    "jsonschema>=4.0,<5",
    "prometheus_client>=0.20",
    "dilithium-py>=1.1.0",
    "uuid6>=2024.1.12",
    "SQLAlchemy>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "cryptography>=43.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.6.1", 
    "pytest-asyncio==1.1.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
numpy = [
    "numpy==1.26.4; python_version < '3.13'",
    "numpy>=2.3.0,<2.4; python_version >= '3.13'",
]
all = [
    "nova-civilizational-architecture[dev,numpy]",
]

[project.urls]
Homepage = "https://github.com/nova-framework/nova-civilizational-architecture"
Documentation = "https://nova-framework.readthedocs.io/"
Repository = "https://github.com/nova-framework/nova-civilizational-architecture"
"Bug Tracker" = "https://github.com/nova-framework/nova-civilizational-architecture/issues"
Changelog = "https://github.com/nova-framework/nova-civilizational-architecture/blob/main/CHANGELOG.md"

[project.scripts]
nova-run = "src.nova.main:main"
nova-validate = "src.nova.validation:main"

[tool.setuptools]
packages = ["src.nova"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"nova.*" = ["*.yaml", "*.json", "*.md", "*.txt"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "health: marks tests as health checks (CI smoke tests)",
    "chaos: marks tests as chaos engineering tests",
    "performance: marks tests as performance tests",
    "property: marks tests as property-based tests",
    "slo: marks tests as service level objective tests",
    "slot01: marks tests for slot01 truth anchor",
    "slot02: marks tests for slot02 deltathresh",
    "slot03: marks tests for slot03 emotional matrix",
    "slot04: marks tests for slot04 tri engine",
    "slot05: marks tests for slot05 constellation",
    "slot06: marks tests for slot06 cultural synthesis",
    "slot07: marks tests for slot07 production controls",
    "slot08: marks tests for slot08 memory ethics",
    "slot09: marks tests for slot09 distortion protection",
    "slot10: marks tests for slot10 civilizational deployment",
    "federation: marks tests as federation tests",
    "phase13b: marks tests for phase 13b temporal continuity",
    "phase14: marks tests for phase 14 features",
    "phase142: marks tests for phase 14.2 postgresql persistence",
    "attestation: marks tests as attestation tests",
    "concurrency: marks tests as concurrency tests",
    "api: marks tests as api tests",
    "meta: marks tests as meta/documentation tests",
    "perf: marks tests as performance tests",
    "quantum: marks tests as quantum entropy tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dilithium_py.*",
    "asyncpg.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "S",  # flake8-bandit (security)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by black
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
    "D107",  # missing docstring in __init__
    "S101",  # use of assert detected (ok for tests)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # ignore unused imports in __init__.py
"tests/**/*" = ["S101"]  # ignore asserts in tests
"scripts/**/*" = ["T201"]  # ignore print statements in scripts

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | htmlcov
  | .pytest_cache
)/
'''

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]  # Skip assert_used and shell injection (both used appropriately in tests/scripts)